--- a/assets/src/views/index.html
+++ b/assets/src/views/index.html
@@ -27,10 +27,10 @@
     <link rel="stylesheet" href="css/main.min.css">
 </head>
 <body>
-<div class="wrapper">
-    //= ../blocks/modules/header/header.html
-</div>
-<hr>
+//= ../blocks/modules/header/header.html
+<span class="hr"></span>
+//= ../blocks/modules/slider/slider.html
+//= ../blocks/modules/content/content.html
 //= ../blocks/modules/footer/footer.html
 <script src="js/main.min.js"></script>
 </body>
