--- a/assets/src/blocks/_modules.scss
+++ b/assets/src/blocks/_modules.scss
@@ -1,2 +1,4 @@
 @import "modules/header/header";
 @import "modules/footer/footer";
+@import "modules/slider/slider";
+@import "modules/content/content";
