--- a/assets/src/styles/helpers/_mixins.scss
+++ b/assets/src/styles/helpers/_mixins.scss
@@ -4,3 +4,21 @@
   max-width: $width;
   margin: 0 auto;
 }
+
+@mixin raleway-r {
+  font-family: 'Raleway Regular';
+}
+
+@mixin wrapper-full {
+  width: $max-width;
+}
+
+@mixin standart-btn {
+  margin: 10px 0;
+  background-color: #D1EFFF;
+  padding: 5px;
+  color: $text-color;
+  cursor: pointer;
+  border: none;
+  min-width: 150px;
+}
