--- a/assets/src/styles/base/_fonts.scss
+++ b/assets/src/styles/base/_fonts.scss
@@ -1,9 +1,9 @@
 @font-face {
   font-family: 'Raleway Regular';
-  src: url('../../fonts/Raleway-Regular.eot');
-  src: url('../../fonts/Raleway-Regular.eot?#iefix') format('embedded-opentype'),
-  url('../../fonts/Raleway-Regular.woff') format('woff'),
-  url('../../fonts/Raleway-Regular.ttf') format('truetype');
+  src: url('../fonts/Raleway-Regular.eot');
+  src: url('../fonts/Raleway-Regular.eot?#iefix') format('embedded-opentype'),
+  url('../fonts/Raleway-Regular.woff') format('woff'),
+  url('../fonts/Raleway-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
